Session Student parent attendance

--- a/force-app/main/default/lwc/sessionFormInstruction/sessionFormInstruction.html
+++ b/force-app/main/default/lwc/sessionFormInstruction/sessionFormInstruction.html
@@ -14,14 +14,14 @@
                     submitting the form, otherwise it will be marked as Late Scheduling</li>
                 <li>Once session schedule is saved, if Date or Start Time is modified, session will be flagged as
                     Rescheduled, along with a counter</li>
-                <li>The before session's Start Time - Date and Start Time will get locked, and to edit this, a query
+                <li>1 hr before session's Start Time - Date and Start Time will get locked, and to edit this, a query
                     will need to be raised on Helpdesk</li>
                 <li>At scheduled Start Time - Class Attendance (or Student + Parent Attendance) for the session will
                     open for entry</li>
                 <li>Once you Save the attendance number, it gets locked. You will not be able to make any further
                     changes, so please re-check before saving</li>
                 <li>Once you save the attendance number, individual student attendance will open, but can be submitted
-                    only if previous sessions attendant is complete.Save as Draft to temporarily save attendance, and Submit Attendance to complete session's data
+                    only if previous sessions attendance is complete. Save as Draft to temporarily save attendance, and Submit Attendance to complete session's data
                     entry and lock all details</li>
                 <li>Overall Class Attendance number should be same as number of students marked 'Present', or you'll
                     need to give a valid reason</li>
@@ -39,7 +39,7 @@
                 <div class="status-item">
                     <div class="statusBtn"><lightning-button variant="brand" label="Complete" class="status-button1">
                     </lightning-button></div>
-                    <div class="status-description">In the session, individual Student Attendance is submitted</div>
+                    <div class="status-description" style="padding-top: 8px;">In the session, individual Student Attendance is submitted</div>
                 </div>
             </div>
 
@@ -47,7 +47,7 @@
                 <div class="status-item">
                      <div class="statusBtn"><lightning-button variant="brand" label="Unscheduled" class="status-button2">
                     </lightning-button></div>
-                    <div class="status-description">No Student/Parent/Flexible Session schedule has been saved</div>
+                    <div class="status-description" style="padding-top: 8px;">No Student/Parent/Flexible Session schedule has been saved</div>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
                 <div class="status-item">
                      <div class="statusBtn"><lightning-button variant="brand" label="Ready For Attendance" class="status-button3">
                     </lightning-button></div>
-                    <div class="status-description">If all conditions are met and you are still getting an error, please reload the page</div>
+                    <div class="status-description" style="padding-top: 8px;">Scheduled Student/Parent/Flexible Session's date and time is in the past but attendance is not saved yet</div>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <div class="status-item">
                      <div class="statusBtn"><lightning-button variant="brand" label="Incomplete" class="status-button4">
                     </lightning-button></div>
-                    <div class="status-description">Session is ready for attendance submission</div>
+                    <div class="status-description">Counselling is pending for 1 or more students in the batch, or session data is pending for a Student/Parent/Flexible Session</div>
                 </div>
             </div>
         </div>
@@ -75,9 +75,9 @@
         <div class="slds-grid slds-wrap slds-gutters">
             <div class="slds-col slds-size_1-of-1 slds-medium-size_1-of-2 addTopClass">
                 <div class="status-item">
-                     <div class="statusBtn"><lightning-button variant="brand" label="Schedule" class="status-button5">
+                     <div class="statusBtn"><lightning-button variant="brand" label="Scheduled" class="status-button5">
                     </lightning-button></div>
-                    <div class="status-description">If all conditions are met and you are still getting an error, please reload the page</div>
+                    <div class="status-description">Student/Parent/Flexible Session is scheduled, but there is more than 1hr left for the session, so details can still be edited</div>
                 </div>
             </div>
 
